--- a/html-themes/public/styles.css
+++ b/html-themes/public/styles.css
@@ -16,7 +16,6 @@
   padding: 0px;
   margin: 0px;
   border-width: 0px;
-  box-sizing: border-box;
 }
 
 body {
@@ -55,6 +54,7 @@ h1, h2, h3, h4, h5, h6 {
 .element {
   flex: 1;
   gap: 0.5rem;
+  align-items: center;
   display: flex;
 }
 
@@ -88,6 +88,14 @@ input[type=radio]:disabled {
    issues while rendering cocentric circles with sub-pixel antialiasing. */
 input[type=radio] {
   will-change: transform;
+}
+
+/*
+ * For some reason this is default for files opend locally and not for served
+ * via HTTP.
+ */
+input:not([type="image" i]) {
+    box-sizing: border-box;
 }
 
 .border {
@@ -126,7 +134,6 @@ input[type=input].float-input2 {
   background-color: #00000000;
   transition: all 0.3s;
   outline: none;
-  padding-right: 2em;
 }
 
 input[type=input].float-input2::placeholder {
@@ -156,17 +163,15 @@ label.float-input2 {
   font-size: 1em;
   position: absolute;
   cursor: text;
-  width:100%;
+  width:inherit;
   max-width:inherit;
   overflow: clip;
   text-wrap: nowrap;
   text-overflow: ellipsis;
   transition-duration:300ms;
   transform:translateY(-0.75em);
-  padding-right: 2em;
   margin: 0;
 }
-
 
 
 .border.float-input3  {
@@ -197,7 +202,6 @@ input[type=input].float-input3 {
   transition: all 0.3s;
   outline: none;
   border:none;
-  padding-right: 2em;
 }
 
 input[type=input].float-input3::placeholder {
@@ -234,7 +238,6 @@ label.float-input3 {
   text-overflow: ellipsis;
   transition-duration:300ms;
   transform:translateY(-0.75em);
-  padding-right: 2em;
   margin: 0;
 }
 
@@ -266,7 +269,6 @@ input[type=input].float-input4 {
   transition: all 0.3s;
   outline: none;
   border:none;
-  padding-right: 2em;
 }
 
 input[type=input].float-input4::placeholder {
@@ -304,7 +306,6 @@ label.float-input4 {
   transition-duration:300ms;
   transform:translateY(-0.75em);
   margin: 0;
-  padding-right: 2em;
 }
 
 
@@ -334,7 +335,6 @@ input[type=input].float-input5 {
   transition: all 0.3s;
   outline: none;
   border:none;
-  padding-right: 2em;
 }
 
 input[type=input].float-input5::placeholder {
@@ -367,7 +367,6 @@ label.float-input5 {
   transition-duration:300ms;
   transform:translateY(-0.75em);
   margin: 0;
-  padding-right: 2em;
 }
 
 
@@ -401,7 +400,6 @@ input[type=input].float-input6 {
   display: absolute;
   top: 0;
   left: 0;
-  padding-right: 2em;
 }
 
 input[type=input].float-input6::placeholder {
