--- a/html-themes/public/styles.css
+++ b/html-themes/public/styles.css
@@ -1,16 +1,10 @@
 :root {
-  /*--bg-color: #0f1011;*/
   --bg-color: hsl(129, 87%, 1.8%);
-  --bg-color-2: hsl(129, 40%, 1.8%);
+  --text-color: hsl(0, 0%, 100%);
+  --text-disabled-color: hsl(0, 0%, 50%);
   --text-secondary-color: hsl(129, 87%, 62%);
-  --text-disabled-color: hsl(129, 87%, 20%);
-  /*--text-secondary-color: hsl(114, 45%, 60%);
-  --text-disabled-color: hsl(114, 45%, 20%);*/
-  --text-color: #ffffff;
-  --hover-text-color: hsl(114, 96%, 95%);
+  --text-secondary-disabled-color: hsl(129, 87%, 20%);
 }
-  /*--text-secondary-color: #74c76b;
-  --text-disabled-color: #74c76b;*/
 
 * {
   padding: 0px;
@@ -422,7 +416,7 @@ label.float-input6:has(+ input.float-input6:not(:placeholder-shown)) {
   transform:translate(-0.4em, -1.5em);
   color: var(--text-secondary-color);
   font-size: 0.8em;
-  background-color: var(--bg-color-2);
+  background-color: var(--bg-color);
   padding-right: 0.2em;
   padding-left: 0.2em;
   border-width: 0.2em;
@@ -492,13 +486,13 @@ form.login-form1 {
 .border-1-hover:hover:not([disabled]) {
   border-style: solid;
   border-radius: 1em;
-  border-color: var(--hover-text-color);
+  border-color: var(--text-color);
 }
 
 .border-1-focus:focus:not([disabled]) {
   border-style: solid;
   border-radius: 1em;
-  border-color: var(--hover-text-color);
+  border-color: var(--text-color);
 }
 
 .border-1-disabled:disabled {
@@ -707,6 +701,10 @@ form.login-form1 {
   color: var(--text-color);
 }
 
+.color-primary-disabled {
+  color: var(--text-disabled-color);
+}
+
 .color-secondary {
   color: var(--text-secondary-color);
 }
@@ -715,12 +713,12 @@ form.login-form1 {
   color: var(--text-secondary-color);
 }
 
-.color-inverted-primary {
-  color: var(--bg-color);
+.color-secondary-disabled {
+  color: var(--text-secondary-disabled-color);
 }
 
-.color-disabled-primary {
-  color: var(--text-disabled-color);
+.color-bg-primary {
+  color: var(--bg-color);
 }
 
 /*
@@ -729,10 +727,6 @@ form.login-form1 {
 
 .bg-primary {
   background-color: var(--bg-color);
-}
-
-.bg-secondary {
-  background-color: var(--bg-color-2);
 }
 
 /*
