--- a/html-themes/style/tailwind.css
+++ b/html-themes/style/tailwind.css
@@ -8,6 +8,7 @@
   --font-serif: Georgia, serif;
   --font-mono: ui-monospace, SFMono-Regular, monospace;
   --color-bg: hsl(129, 87%, 1.8%);
+  --color-secondary-bg: hsl(129, 60%, 3.5%);
   --color-primary: hsl(0, 0%, 100%);
   --color-primary-disabled: hsl(0, 0%, 50%);
   --color-secondary: hsl(129, 87%, 62%);
@@ -50,6 +51,11 @@
     }
   }
 
+  .border2-sidebar {
+    border-style: solid;
+    border-color: var(--color-secondary);
+  }
+
   .border3 {
     border-width: calc(3rem / 16);
     border-style: solid;
@@ -65,6 +71,11 @@
       border-color: var(--color-secondary-disabled);
       box-shadow: var(--color-secondary-disabled) 0 0 calc(3rem / 16), inset var(--color-secondary-disabled) 0 0 calc(3rem / 16);
     }
+  }
+
+  .border3-sidebar {
+    border-style: solid;
+    border-color: var(--color-secondary);
   }
 
   .border4 {
